<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PennyPincher</string>
    <string name="pennyPincher">PennyPincher</string>
    <string name="play">PLAY</string>
    <string name="options">OPTIONS</string>
    <string name="help">HELP</string>
    <string name="header_for_main_menu">Header for Main Menu</string>
    <string name="main_menu_graphic">Main Menu Graphic</string>
    <string name="about_minesweeper_header">About PennyPincher</string>
    <string name="about_minesweeper">PennyPincher is a game revolved around finding the hidden coins.<br/>
    You must find all of the hidden coins within the money bags using as little scans as you can!
    Pressing on a money bag with no coin uses up a scan, which helps you find the coin
    in each row and/or column. You can also use a scan on a coin you found. Good luck!</string>
    <string name="links_citations" tools:ignore="Typos">https://www.cleanpng.com/png-canada-penny-debate-in-the-united-states-coin-cent-3490295\n
                https://pnghut.com/png/R2qRTuF1Cz/money-bag-united-states-dollar-image-transparent-png\n
                pinterest.ca/pin/408349891195209253\n
                https://www.pngitem.com/pimgs/m/121-1219503_pinching-hand-emoji-png-transparent-png.png</string>
    <string name="creators_header">About The Creators</string>
    <string name="creators_info">Created by Zaid Arshad and Daniel Nguyen for CMPT 276.</string>
    <string name="resources_header">Resources</string>
    <string name="authors">Daniel Nguyen - Zaid Arshad</string>
    <string name="board_size">Board Size</string>
    <string name="header_for_options">header for options</string>
    <string name="_6_x_4">6 x 4</string>
    <string name="_10_x_5">10 x 5</string>
    <string name="_15_x_6">15 x 6</string>
    <string name="mines">Mines</string>
    <string name="_6">6</string>
    <string name="_10">10</string>
    <string name="_15">15</string>
    <string name="_20">20</string>
    <string name="erase_times_played">Erase Times Played</string>
    <string name="times_played_shared_pref">TIMES_PLAYED_SHARED_PREFERENCES</string>
    <string name="_50">50</string>
    <string name="times_played">Times Played</string>
    <string name="scans_used_0">0 Scans Used</string>
    <string name="found_1_of_8_pennies">0 Pennies Found</string>
    <string name="penny_for_spinning">penny for spinning</string>
    <string name="start">Start</string>
    <string name="linkshere">linksHere</string>
    <string name="homePageLink">https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home </string>
    <string name="erase_high_scores">Erase High Scores</string>
</resources>