<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PennyPincher.Activities.MainMenu"
    android:background="@drawable/money_background">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/imgPenny"
            android:contentDescription="@string/penny_for_spinning"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/penny" />
    </FrameLayout>

    <Button
        android:id="@+id/playButton"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/mainTheme"
        android:layout_margin="10dp"
        android:text="@string/play"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/optionsButton"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/mainTheme"
        android:layout_margin="10dp"
        android:text="@string/options"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/helpButton"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/mainTheme"
        android:layout_margin="10dp"
        android:text="@string/help"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/optionsButton"
        app:layout_constraintStart_toEndOf="@+id/playButton"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/mainMenuHeader"
        android:layout_width="707dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        android:scaleX="25"
        android:scaleY="1.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/editbox_dropdown_dark_frame"
        android:contentDescription="@string/header_for_main_menu" />

    <TextView
        android:id="@+id/helpTitle"
        android:layout_width="437dp"
        android:layout_height="76dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:scaleY="1"
        android:text="@string/pennyPincher"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>